fix(Nav): fix mobile nav overflow scroll

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -53,7 +53,6 @@
 
 .mobile-nav-container {
   display: none;
-  position: absolute;
 }
 
 .mobile-menu {
@@ -127,6 +126,8 @@
 
   .mobile-nav-container {
     display: block;
+    overflow: hidden;
+    position: absolute;
   }
 
   .full-nav-container {
